[workspace]
members = [
  "crates/warp-link-core",
  "crates/warp-link-coordination",
  "crates/warp-link-transport",
  "crates/warp-link",
  "crates/warp-link-ffi",
  "crates/pushgo-warp-profile",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["PushGo Team"]

[workspace.dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
futures-util = "0.3.32"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
quinn = { version = "0.11.9", default-features = false, features = [
  "runtime-tokio",
  "rustls-aws-lc-rs",
] }
rand = "0.10.0"
rustls = { version = "0.23.37", default-features = false, features = [
  "aws_lc_rs",
  "std",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
  "net",
  "io-util",
] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-webpki-roots",
] }
url = "2.5.8"
webpki-roots = "1.0.6"
sha2 = "0.10.9"
parking_lot = "0.12.5"
hex = "0.4.3"
flume = "0.11.1"
