[package]
name = "pushgo-warp-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
warp-link-core = { path = "../warp-link-core" }
