[package]
name = "warp-link"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["quic", "tcp", "wss"]
quic = ["warp-link-transport/quic"]
tcp = ["warp-link-transport/tcp"]
wss = ["warp-link-transport/wss"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
warp-link-core = { path = "../warp-link-core" }
warp-link-transport = { path = "../warp-link-transport", default-features = false }

[dev-dependencies]
pushgo-warp-profile = { path = "../pushgo-warp-profile" }
